--- a/osqa/forum/skins/duke/templates/markdown_help.html
+++ b/osqa/forum/skins/duke/templates/markdown_help.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% load i18n %}
 
-{% block fulltitle %}{% spaceless %}{% trans "Markdown Help" %}{% endspaceless %}{% endblock %}
+{% block fulltitle %}{% spaceless %}{% trans "Question Details" %}{% endspaceless %}{% endblock %}
 
 {% block forejs %}
     <link rel="stylesheet" type="text/css" media="all" href="{% media  "/media/style/markdown_help.css" %}" />
